# chess-python-fast-api

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  alembic.ini  exceptions.py  logger.py  main.py  mixins.py  pyproject.toml  ruff.toml  schemas.py  utils.py
alembic/: env.py
alembic/versions/: 2025_03_20_2246-2f82f5383909_create_user_and_profile_table.py  2025_03_20_2359-3f7cc81d7ff7_update_profile_table_and_create_country_.py  2025_03_23_0136-7595caf187c5_update_models.py  2025_03_23_0314-7c2c301d2c85_create_association_table_for_user_role_.py  2025_03_23_0338-67cb2472f432_create_privilege_table_and_association_.py  2025_03_23_0853-c59700bf726c_update_association_tables_with_orm_.py  2025_03_30_1154-9abf2381bb1d_fix_associaton_association_in_.py  2025_03_30_1945-c1cb93654ec0_add_uuid_for_user_models.py  2025_04_01_2034-72fb27e548e5_update_timestamp_fields.py  2025_04_10_1119-e065f8e92b24_update_length_field.py  2025_04_10_1208-cc0658e7344a_update_fields_as_timezone.py  2025_04_10_1211-7c6620fa6546_update_length_password_hash.py
api_v1/auth/: README.md  __init__.py  association_tables.py  constants.py  dependencies.py  enums.py  exceptions.py  jwt_auth.py  models.py  router.py  schemas.py  services.py  utils.py
api_v1/users/: __init__.py  association_tables.py  exceptions.py  mixin.py  models.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py
database/: README.md  base.py  db_helper.py
requirements/: requirements.in  requirements.txt
