[project]
name = "chess"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic[email]>=2.11.1",
    "pydantic-settings>=2.8.1",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.40",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.2",
    "pre-commit>=4.2.0",
    "isort>=6.0.1",
    "types-pyyaml>=6.0.12.20241230",
    "types-greenlet>=3.1.0.20250318",
    "types-psycopg2>=2.9.21.20250318",
    "types-ujson>=5.10.0.20240515",
]
